# Top-Down-Shooter

./: CMakeLists.txt  README.md
include/engine/: ComponentArray.h  ComponentManager.h  ComponentStorage.h  Coordinator.h  EntityManager.h  README.md  Registry.h  System.h  SystemManager.h  TextureManager.h  Types.h  Vec2.h
include/game/: EntityCreator.h  Systems.h  TextureAssets.h  components.h
src/: Game.cpp  Game.h  main.cpp
src/Entities/: Player.h
src/engine/: ComponentManager.cpp  ComponentStorage.cpp  Coordinator.cpp  EntityManager.cpp  Registry.cpp  System.cpp  SystemManager.cpp  TextureManager.cpp
src/game/: Systems.cpp
src/legacy/: GameObject.h  Laser.h  Meteor.h
